--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,26 @@
 .App {
+  width: 100%;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.App-title {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.text-input {
+  width: 100%;
+  align-content: center;
+  border: 1px solid #f7f7f7;
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+.news-items {
+  list-style: none;
+  padding-left: 0;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.news-items li {
+  margin-bottom: 10px;
 }
